--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@datastax/astra-db-ts": "^1.3.0",
+    "@langchain/openai": "^0.2.1",
     "@prisma/client": "^5.16.1",
     "ai": "^3.2.16",
     "clsx": "^2.1.1",
+    "langchain": "^0.2.8",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "openai": "^4.52.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
