--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@datastax/astra-db-ts": "^1.3.0",
     "@langchain/openai": "^0.2.1",
     "@prisma/client": "^5.16.1",
+    "@uploadthing/react": "^6.7.2",
     "ai": "^3.2.16",
     "clsx": "^2.1.1",
     "langchain": "^0.2.8",
@@ -23,7 +24,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^2.3.0",
+    "uploadthing": "^6.13.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
