--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.1",
     "@datastax/astra-db-ts": "^1.3.0",
     "@langchain/openai": "^0.2.1",
     "@prisma/client": "^5.16.1",
     "@uploadthing/react": "^6.7.2",
     "ai": "^3.2.16",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "langchain": "^0.2.8",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
     "openai": "^4.52.3",
     "react": "^18",
@@ -30,6 +33,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -37,6 +41,7 @@
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
+    "prisma": "^5.16.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
