--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "openai": "^4.52.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "uploadthing": "^6.13.2",
     "zod": "^3.23.8"
