--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
